<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/edi_answerHint">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/voc5TextInput.EditText"
            android:id="@+id/newAnswerEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/edi_questionHint" >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/voc5TextInput.EditText"
            android:id="@+id/newQuestionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/edi_langHint">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/voc5TextInput.EditText"
            android:id="@+id/newLanguageEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phaseInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/edi_phaseHint"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/voc5TextInput.EditText"
            android:id="@+id/newPhaseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:textSize="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/commitChangeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/edi_commitBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />


</LinearLayout>
